fix-jumpScreen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,6 +87,12 @@
 
   .embla-thumbs__slide__number {
     border-radius: 1.8rem;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    touch-action: manipulation;
+    display: inline-flex;
+    text-decoration: none;
     cursor: pointer;
     font-size: 1.8rem;
     font-weight: 600;
